# ChangeLog for dev-util/netbeans
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  Enhanced Netbeans configuration script so it can now auto-configure Netbeans
  for Tomcat 5.5 and JBoss 4 servers

  12 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  optimized 5.5-r1 ebuild for merge speed, changed jdk and jre to >=1.5,
  removed patches; nb 6.0: removed some repoman warnings

  28 Sep 2006; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Removing 5.0 ebuild its broken, and all effort will go into furture releases
  like 5.5, 6.0 and so on. Added change accidentally applied to 5.5_beta to
  5.5_beta-r1 and removed the previous version. Added -* keyword to 5.5_beta2
  since its borked atm. Thanks to cddl license stuff in build.xml files that
  breaks xml parsers. Woot!

  21 Sep 2006; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Corrected dep on 1.5 jdks only. Re-created startscript.sh

  21 Sep 2006; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Re-created previous public-packages patch that was never put into svn for
  some reason. Also created another files-layout patch. For some odd reason a
  single build.xml file get's copied into a build.org, thus the files-layout
  patch.

*netbeans-4.0-r2 (17 Jul 2005)

  17 Jul 2005; Karl Trygve Kalleberg <karltk@gentoo.org>:
  Version bump because of Bug #98603, Bug #96646 and Bug 99545. This version 
  now depends on the corrected version of jmi-interface and doesn't fail with 
  access violations if the system jars are dated older then the files in the   
  Netbeans tarball. Also more information messages about the progress of the 
  ebuild.
  
  19 Jun 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  -netbeans-4.0.ebuild:
  Removing 4.0 in favor of 4.0-r1, it is a broken ebuild now

  19 Jun 2005; Saleem Abdulrasool <compnerd@gentoo.org>