@@ -2,10 +2,10 @@ AUX 5.5/startscript.sh 421 RMD160 6494dc2a8d810d37f9eea36b4cf759aea8ec92d9 SHA1 
 MD5 06cb85e3af52ad431914dd95f3ed4eff files/5.5/startscript.sh 421
 RMD160 6494dc2a8d810d37f9eea36b4cf759aea8ec92d9 files/5.5/startscript.sh 421
 SHA256 dfd619a0a71b28e17facb015e8d4be79c495361f29e97da4cf55ced7f3f87b5f files/5.5/startscript.sh 421
-AUX 6.0/config.sh 8253 RMD160 e721a7b23b259308d0005e92dc81ba9ad886c5c5 SHA1 af0b4dab9840b3e85fdb27205c2ad59afe4f6ca3 SHA256 75b3098e5d36cc1a3ad7ae01bf5332d9248d65322067063636e6b90ac5e61d60
-MD5 234b0f51cafbf9184cb0173d64290a6d files/6.0/config.sh 8253
-RMD160 e721a7b23b259308d0005e92dc81ba9ad886c5c5 files/6.0/config.sh 8253
-SHA256 75b3098e5d36cc1a3ad7ae01bf5332d9248d65322067063636e6b90ac5e61d60 files/6.0/config.sh 8253
+AUX 6.0/config.sh 8352 RMD160 e68f4fb500e036554df40993ce6231fcf7a1c1dc SHA1 afe3c39d6a9e3c47225eb2159003453814349247 SHA256 cd39177f331818f0b8920a70fb35e1b2f70505f6a2a48301318ab6f6cea4fac3
+MD5 5950d9f0792aaf6273b86bb67a3e5478 files/6.0/config.sh 8352
+RMD160 e68f4fb500e036554df40993ce6231fcf7a1c1dc files/6.0/config.sh 8352
+SHA256 cd39177f331818f0b8920a70fb35e1b2f70505f6a2a48301318ab6f6cea4fac3 files/6.0/config.sh 8352
 AUX 6.0/netbeans-6.0_alpha20061023-gentoo.patch 1373 RMD160 40bdeed6c42432f63a903aa9f22fd8a63d75bdab SHA1 d4f047fe35a1d0781eca1293db4e1197b719ca09 SHA256 29d284101bee8b3d4139c9f887814b88cf5e3f4da17d3839aff3a2475edf6d37
 MD5 576bd3a67bb99c0b4ed84b590fa2d948 files/6.0/netbeans-6.0_alpha20061023-gentoo.patch 1373
 RMD160 40bdeed6c42432f63a903aa9f22fd8a63d75bdab files/6.0/netbeans-6.0_alpha20061023-gentoo.patch 1373
@@ -35,10 +35,10 @@ EBUILD netbeans-6.0_alpha20061109.ebuild 14963 RMD160 4e281364696ca2d6ad00513150
 MD5 6c36234a6285e1e6d41f78f787b90662 netbeans-6.0_alpha20061109.ebuild 14963
 RMD160 4e281364696ca2d6ad00513150dceb1d3f0e8540 netbeans-6.0_alpha20061109.ebuild 14963
 SHA256 a1fa6261dbf145eb0a83c750198c4400bfae0849d703467d87b389f85e3484af netbeans-6.0_alpha20061109.ebuild 14963
-MISC ChangeLog 6861 RMD160 6e7b766ff1b85f245eb3339c7272b67fb5efbf73 SHA1 df6b4a722a4abf2561d3a193f2ec41f0a197bb4a SHA256 1dc04b7f69488552bb8f8370ac458acd1f43d99b27997a217e4ecbb869b52f69
-MD5 7e8e01fdff29c68524e930b2d44a6f3c ChangeLog 6861
-RMD160 6e7b766ff1b85f245eb3339c7272b67fb5efbf73 ChangeLog 6861
-SHA256 1dc04b7f69488552bb8f8370ac458acd1f43d99b27997a217e4ecbb869b52f69 ChangeLog 6861
+MISC ChangeLog 7036 RMD160 54bd0783229e95841f8e1514c0321705eb7c18a9 SHA1 e5055537ab7838dff32989db6ed35aabbe2bc390 SHA256 85a63849c7224e58546c293d84954b8c7236dcb5b956a70a0c84d0ef0c58ee81
+MD5 ef8f7d02e79f29617a2df1a65666dd65 ChangeLog 7036
+RMD160 54bd0783229e95841f8e1514c0321705eb7c18a9 ChangeLog 7036
+SHA256 85a63849c7224e58546c293d84954b8c7236dcb5b956a70a0c84d0ef0c58ee81 ChangeLog 7036
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
 MD5 e7fcbf7f5131562425fda47afe3b39b9 metadata.xml 1128
 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd metadata.xml 1128
