@@ -2,6 +2,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
+  improved ant configuration part of config script - now it works even if the
+  target dir doesn't exist
+
   22 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
   Enhanced Netbeans configuration script so it can now auto-configure Netbeans
   for Tomcat 5.5 and JBoss 4 servers
